# car-maintainence-tracking-api

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 71080326941d_create_vehicles_and_maintenance_records.py  92213cdad509_add_service_provider_model.py  b0f3513c50ff_initial_migration.py  b15d12e4f6c7_addition_of_new_columns.py  be536e331944_restrict_maintenance_type_to_enum_add_.py
app/: main.py
app/core/: config.py
app/database/: connection.py  session.py
app/dependencies/: db_helpers.py  pagination.py
app/models/: __init__.py  enums.py  maintainence.py  service_provider.py  vehicle.py
app/routers/: alerts.py  analytics.py  maintainence.py  service_provider.py  vehicles.py
app/schemas/: maintainence.py  pagination.py  service_provider.py  vehicle.py
