[project]
name = "demo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.137.2",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
